Fix section and scrolling spacing

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -11,6 +11,7 @@
 html, body {
     color: var(--black-color, #000000);
     font-family: 'Poppins', sans-serif;
+    scroll-padding-top: 4.5rem;
 }
 
 .header-font {
